@@ -1,0 +1,8 @@
+# SCL; 27 Aug 2013
+
+usersmanual.pdf: usersmanual.tex
+	pdflatex $<
+	pdflatex $<
+
+clean:
+	rm -f usersmanual.{pdf,toc,aux,log,out}
